<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_misc"
        android:icon="@drawable/ic_baseline_more_vert_24"
        android:title=""
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_selection_cancel"
                android:title="@string/cancel" />
            <item android:title="@string/selection">
                <menu>
                    <item
                        android:id="@+id/action_selection_all"
                        android:title="@string/all" />
                    <item
                        android:id="@+id/action_selection_none"
                        android:title="@string/none" />
                    <item
                        android:id="@+id/action_selection_invert"
                        android:title="@string/invert" />
                    <item
                        android:id="@+id/action_selection_available"
                        android:title="@string/selection_available" />
                    <item
                        android:id="@+id/action_selection_unavailable"
                        android:title="@string/selection_unavailable" />
                    <item
                        android:id="@+id/action_selection_insecure"
                        android:title="@string/selection_insecure" />
                </menu>
            </item>
            <item android:title="@string/menu_group">
                <menu>
                    <item
                        android:id="@+id/action_selection_group_copy"
                        android:title="@string/copy" />
                    <item
                        android:id="@+id/action_selection_group_move"
                        android:title="@string/move" />
                </menu>
            </item>
            <item android:title="@string/statistics">
                <menu>
                    <item
                        android:id="@+id/action_selection_clear_traffic"
                        android:title="@string/clear_traffic_statistics" />
                    <item
                        android:id="@+id/action_selection_clear_tests"
                        android:title="@string/connection_test_clear_results" />
                </menu>
            </item>
            <item android:title="@string/test">
                <menu>
                    <item
                        android:id="@+id/action_selection_icmp_ping"
                        android:title="@string/connection_test_icmp_ping" />
                    <item
                        android:id="@+id/action_selection_tcp_ping"
                        android:title="@string/connection_test_tcp_ping" />
                    <item
                        android:id="@+id/action_selection_url_test"
                        android:title="@string/connection_test_url_test" />
                </menu>
            </item>
            <item android:title="@string/share">
                <menu>
                    <item android:title="@string/share_qr_nfc">
                        <menu>
                            <item
                                android:id="@+id/action_selection_standard_qr"
                                android:title="@string/standard" />
                            <item
                                android:id="@+id/action_selection_universal_qr"
                                android:title="SN Link" />
                        </menu>
                    </item>
                    <item android:title="@string/action_export_clipboard">
                        <menu>
                            <item
                                android:id="@+id/action_selection_standard_clipboard"
                                android:title="@string/standard" />
                            <item
                                android:id="@+id/action_selection_universal_clipboard"
                                android:title="SN Link" />
                        </menu>
                    </item>
                    <item android:title="@string/menu_configuration">
                        <menu>
                            <item
                                android:id="@+id/action_selection_config_clipboard"
                                android:title="@string/action_export_clipboard" />
                            <item
                                android:id="@+id/action_selection_config_file"
                                android:title="@string/action_export_file" />
                        </menu>
                    </item>
                    <item android:title="@string/amneziawg_json">
                        <menu>
                            <item
                                android:id="@+id/action_selection_amneziawg_json_clipboard"
                                android:title="@string/action_export_clipboard" />
                            <item
                                android:id="@+id/action_selection_amneziawg_json_file"
                                android:title="@string/action_export_file" />
                        </menu>
                    </item>
                </menu>
            </item>
            <item
                android:id="@+id/action_selection_delete"
                android:title="@string/delete" />
        </menu>
    </item>
</menu>
